- add bottom navigation. fix size bottomNavView, add borderLine, add Toolbar, linearLayout change to textView with icon.

--- a/app/src/main/res/layout/activity_audioplayer.xml
+++ b/app/src/main/res/layout/activity_audioplayer.xml
@@ -5,7 +5,7 @@
     style="@style/MainActivityColorStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".audio_player_activity.ui.AudioPlayerActivity">
+    tools:context=".audio_player.ui.AudioPlayerActivity">
 
     <ScrollView
         android:layout_width="match_parent"
