--- a/app/src/main/res/layout/fragment_mediateka.xml
+++ b/app/src/main/res/layout/fragment_mediateka.xml
@@ -5,30 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".mediateka_fragment.ui.MediatekaFragment">
+    tools:context=".mediateka.ui.MediatekaFragment">
 
-    <LinearLayout
+    <Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_search_image"
-        android:orientation="horizontal">
+        android:layout_margin="@dimen/margin_search_image">
 
         <TextView
-            android:id="@+id/text_view_settings"
+            android:id="@+id/text_view_settings_toolbar"
             style="@style/SettingsTextViewItemStyle"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_settings_menu_start"
             android:layout_marginTop="@dimen/margin_settings_menu_start"
             android:layout_marginEnd="@dimen/margin_settings_menu_bottom"
-            android:layout_marginBottom="@dimen/margin_settings_menu_start"
-            android:layout_weight="1"
+            android:layout_marginBottom="@dimen/margin_settings_menu_bottom"
             android:fontFamily="@font/ys_display_medium"
             android:text="@string/mediateka"
             android:textSize="@dimen/primary_text_size" />
-
-
-    </LinearLayout>
+    </Toolbar>
 
     <LinearLayout
         android:id="@+id/content_linearlayout"
@@ -42,13 +38,12 @@
             style="@style/MediatekaTabStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/ys_display_medium"
             android:layout_marginLeft="@dimen/margin_search_layout_top_bottom"
             android:layout_marginRight="@dimen/margin_search_layout_top_bottom"
+            android:fontFamily="@font/ys_display_medium"
             android:textSize="@dimen/search_track_button_refresh_text_size"
             app:tabIndicatorFullWidth="true"
-            app:tabMode="fixed"
-             />
+            app:tabMode="fixed" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/pager"
