--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,5 @@
     <dimen name="search_track_progressbar_size">44dp</dimen>
     <dimen name="margin_top_play_pause_button_player">30dp</dimen>
     <dimen name="mediateka_text_view_width">300dp</dimen>
+    <dimen name="bottom_nav_bar_height">64dp</dimen>
 </resources>
