--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,13 @@
         <item name="tint">@color/image_color</item>
     </style>
 
+    <style name="SettingsTextViewAndImageViewItemStyle">
+        <item name="android:drawableTint">@color/image_color</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/settings_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+
     <style name="SettingsImageViewBackArrowStyles">
         <item name="tint">@color/button_textColor</item>
     </style>
@@ -37,6 +44,14 @@
     <style name="SettingsLightDarkThemeSwitchStyle">
         <item name="trackTint">@color/search_layout_color</item>
         <item name="thumbTint">@color/image_color</item>
+    </style>
+
+    <style name="SettingsLightDarkSwitchMaterial">
+        <item name="trackTint">@color/search_layout_color</item>
+        <item name="thumbTint">@color/image_color</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/settings_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
 
     <style name="SearchLayoutStyles">
@@ -143,6 +158,10 @@
         <item name="itemTextColor">@drawable/bottom_nav_item_color_light</item>
         <item name="android:background">@color/title_textColor</item>
 
+    </style>
+
+    <style name="BottomNavigationBorderLineStyle">
+        <item name="android:background">@color/search_layout_color</item>
     </style>
 
     <style name="MainActivityColorStyle">
