--- a/app/src/main/res/layout/activity_audioplayer.xml
+++ b/app/src/main/res/layout/activity_audioplayer.xml
@@ -136,12 +136,11 @@
                 app:layout_constraintTop_toBottomOf="@+id/text_view_artist_name" />
 
             <ImageButton
-                android:id="@+id/image_button_like_it"
+                android:id="@+id/image_button_like_it_not_check"
                 style="@style/PlayerGrayButtonStyle"
                 android:layout_width="@dimen/player_small_gray_button_size"
                 android:layout_height="@dimen/player_small_gray_button_size"
                 android:background="@drawable/round_button"
-
                 android:src="@drawable/sharp_favorite_border_24"
                 app:layout_constraintBottom_toBottomOf="@+id/image_button_play_track"
                 app:layout_constraintEnd_toStartOf="@+id/right_guideline"
@@ -149,6 +148,21 @@
                 app:layout_constraintStart_toStartOf="@+id/left_guideline"
                 app:layout_constraintTop_toTopOf="@+id/image_button_play_track"
                 app:tint="@color/white" />
+
+            <ImageButton
+                android:id="@+id/image_button_like_it_check"
+                style="@style/PlayerGrayButtonStyle"
+                android:layout_width="@dimen/player_small_gray_button_size"
+                android:layout_height="@dimen/player_small_gray_button_size"
+                android:background="@drawable/round_button"
+
+                android:src="@drawable/baseline_favorite_24"
+                app:layout_constraintBottom_toBottomOf="@+id/image_button_play_track"
+                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/left_guideline"
+                app:layout_constraintTop_toTopOf="@+id/image_button_play_track"
+                app:tint="@color/red_selected_color" />
 
             <TextView
                 android:id="@+id/text_view_track_time_now_play"
@@ -163,14 +177,7 @@
                 app:layout_constraintStart_toStartOf="@+id/left_guideline"
                 app:layout_constraintTop_toBottomOf="@+id/image_button_play_track" />
 
-            <!--         <androidx.constraintlayout.widget.Guideline
-                         android:id="@+id/bottom_guideline"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:orientation="horizontal"
-                         android:visibility="gone"
-                         app:layout_constraintGuide_percent="0.75" />
-         -->
+
             <TextView
                 android:id="@+id/text_view_track_time_label"
                 style="@style/PlayerTextViewLabelsStyle"
