--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -177,4 +177,37 @@
     <style name="MainActivityColorStyle">
         <item name="android:background">@color/main_background_color_night</item>
     </style>
+
+    <style name="CreatePlaylistEditTextTextStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/settings_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColorHint">@color/white</item>
+    </style>
+
+    <style name="CreatePlaylistTextViewHintStyle">
+        <item name="android:background">@color/button_textColor</item>
+        <item name="android:textColor">@color/main_background_color</item>
+        <item name="android:textSize">@dimen/create_track_hint_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+
+    <style name="PlayListItemStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/create_track_hint_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+
+    <style name="ViewInBottomSheetStyle">
+        <item name="background">@color/white</item>
+    </style>
+
+    <style name="BottomSheetStyle">
+        <item name="android:background">@drawable/rectangle_for_bottom_sheet_dark</item>
+    </style>
+
+    <style name="PlayListItemViewCardStyle">
+        <item name="android:backgroundTint">@color/main_background_color_night</item>
+    </style>
+
 </resources>
