--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,11 +3,12 @@
     <dimen name="primary_text_size">22sp</dimen>
     <dimen name="settings_text_size">16sp</dimen>
     <dimen name="search_track_item_info_text_size">11sp</dimen>
+    <dimen name="create_track_hint_text_size">12sp</dimen>
     <dimen name="player_text_view_info_text_size">13sp</dimen>
-    <dimen name="arrow_size">20dp</dimen>
     <dimen name="search_track_button_refresh_text_size">14sp</dimen>
     <dimen name="search_track_text_size">19sp</dimen>
 
+    <dimen name="arrow_size">20dp</dimen>
     <dimen name="top_title_margin">12dp</dimen>
     <dimen name="bottom_title_margin">40dp</dimen>
     <dimen name="base_margin">16dp</dimen>
@@ -31,4 +32,5 @@
     <dimen name="margin_top_play_pause_button_player">30dp</dimen>
     <dimen name="mediateka_text_view_width">300dp</dimen>
     <dimen name="bottom_nav_bar_height">64dp</dimen>
+    <dimen name="_14dp">14dp</dimen>
 </resources>
