--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -168,4 +168,36 @@
         <item name="android:background">@color/title_textColor</item>
     </style>
 
+    <style name="CreatePlaylistEditTextTextStyle">
+        <item name="android:textColor">@color/button_textColor</item>
+        <item name="android:textSize">@dimen/settings_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColorHint">@color/button_textColor</item>
+    </style>
+
+    <style name="CreatePlaylistTextViewHintStyle">
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/main_background_color</item>
+        <item name="android:textSize">@dimen/create_track_hint_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+
+    <style name="PlayListItemStyle">
+        <item name="android:textColor">@color/button_textColor</item>
+        <item name="android:textSize">@dimen/create_track_hint_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+
+    <style name="ViewInBottomSheetStyle">
+        <item name="background">@color/search_layout_color</item>
+    </style>
+
+    <style name="BottomSheetStyle">
+        <item name="android:background">@drawable/rectangle_for_bottom_sheet</item>
+    </style>
+
+    <style name="PlayListItemViewCardStyle">
+        <item name="android:backgroundTint">@color/white</item>
+    </style>
+
 </resources>
