--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -27,6 +27,9 @@
         <action
             android:id="@+id/action_mediatekaFragment_to_audioPlayerFragment"
             app:destination="@id/audioPlayerFragment" />
+        <action
+            android:id="@+id/action_mediatekaFragment_to_currentPlayListFragment"
+            app:destination="@id/currentPlayListFragment" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
@@ -57,6 +60,18 @@
         tools:layout="@layout/fragment_audioplayer" >
         <action
             android:id="@+id/action_audioPlayerFragment_to_createPlaylistFragment"
+            app:destination="@id/createPlaylistFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/currentPlayListFragment"
+        android:name="com.example.playlistmaker.current_playlist.ui.CurrentPlayListFragment"
+        android:label="fragment_current_play_list"
+        tools:layout="@layout/fragment_current_play_list" >
+        <action
+            android:id="@+id/action_currentPlayListFragment_to_audioPlayerFragment"
+            app:destination="@id/audioPlayerFragment" />
+        <action
+            android:id="@+id/action_currentPlayListFragment_to_createPlaylistFragment"
             app:destination="@id/createPlaylistFragment" />
     </fragment>
 </navigation>
