--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -164,7 +164,6 @@
     </style>
 
     <style name="BottomNavigationViewStyle">
-
         <item name="itemIconTint">@drawable/bottom_nav_item_color_dark</item>
         <item name="itemTextColor">@drawable/bottom_nav_item_color_dark</item>
         <item name="android:background">@color/main_background_color_night</item>
@@ -209,5 +208,16 @@
     <style name="PlayListItemViewCardStyle">
         <item name="android:backgroundTint">@color/main_background_color_night</item>
     </style>
+
+    <style name="CurrentPlayListFragmentStyle">
+        <item name="android:background">@color/search_layout_color</item>
+    </style>
+
+    <style name="CurrentPlayListBottomSheetMenuTextViewStyle">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">@dimen/settings_text_size</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 
 </resources>
