--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".search.ui.SearchFragment">
 
-    <Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_search_image">
@@ -24,7 +24,7 @@
             android:fontFamily="@font/ys_display_medium"
             android:text="@string/search"
             android:textSize="@dimen/primary_text_size" />
-    </Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -56,6 +56,7 @@
             <EditText
                 android:id="@+id/edit_text_search"
                 style="@style/SearchEditTextStyle"
+                android:textCursorDrawable="@drawable/cursor_color"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
